# Rust-chess-server

./: .dockerignore  .gitignore  .zshrc  .zshrc.save  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  nginx.conf  package.json  shuttle.toml
.cargo/: config.toml
.github/workflows/: build-and-deploy.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: castling.rs  check.rs  checkmate.rs  chess.rs  chessboard.rs  game_state.rs  gamestate.rs  main.rs  make_chess_move.rs  make_move.rs  moves.rs  piece.rs  player.rs  possible_moves.rs
backend/src/chessboard/: file.rs  rank.rs  square.rs
backend/src/moves/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
backend/src/moves/move_helpers/: bishop_move.rs  bishop_move_helpers.rs  helpers.rs  rook_move.rs  rook_move_helpers.rs
backend/src/moves/pawn/: black.rs  black_pawn.rs  white.rs  white_pawn.rs
chess/: .gitignore  Cargo.toml
chess/src/: castling.rs  check.rs  checkmate.rs  chess.rs  chessboard.rs  game_state.rs  lib.rs  main.rs  make_chess_move.rs  moves.rs  piece.rs  pieces_eaten.rs  player.rs
chess/src/chessboard/: file.rs  rank.rs  square.rs
chess/src/moves/: bishop.rs  king.rs  knight.rs  move_helpers.rs  pawn.rs  queen.rs  rook.rs
chess/src/moves/move_helpers/: bishop_move.rs  helpers.rs  rook_move.rs
chess/src/moves/pawn/: black.rs  white.rs
frontend/: .gitignore  Dockerfile  biome.json  bun.lockb  package.json  pasa.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/app/: board.tsx  page.tsx
frontend/src/lib/: chessboard.svelte  square.svelte  startingPosition.ts  types.ts  utils.ts  websocketStore.ts  websocketTypes.ts
frontend/src/lib/components/: GameInfo.svelte  WelcomeNotification.svelte  chessboard.svelte  errorMessage.svelte  footer.svelte  gameOver.svelte  header.svelte  improvements.svelte  inputForm.svelte  moveGuide.svelte  resetButton.svelte  rustLogo.svelte  square.svelte  techStack.svelte  title.svelte  websocketInfo.svelte
frontend/src/lib/components/chess/: EatenPiecesList.svelte  chessSquare.svelte  chessboard.svelte  eatenPiece.svelte  eatenPieces.svelte  eatenPieces.ts  gameOver.svelte  piece.svelte  startingPosition.ts  utils.ts
frontend/src/lib/constants/: animation.ts
frontend/src/lib/stores/: animationStore.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  chessboard.svelte  pasa.json  square.svelte  starting_position.json  types.ts
frontend/src/routes/about/: +page.svelte
frontend/src/routes/technology/: +page.svelte
frontend_rewrite/: Cargo.toml  index.html
frontend_rewrite/src/: main.rs
my-app/: bun.lockb  package-lock.json  package.json
my-app/src/routes/: +page.svelte  +page.ts
src/: board.rs  castling.rs  check.rs  checkmate.rs  chess.rs  chessboard.rs  empty_piece.rs  file.rs  gameover.rs  main.rs  moves.rs  pawn.rs  piece.rs  player.rs  rank.rs  square.rs
src/board/: square.rs
src/chessboard/: file.rs  rank.rs  square.rs
src/moves/: bishop.rs  black_pawn.rs  king.rs  knight.rs  move_helpers.rs  pawn.rs  queen.rs  rook.rs  white_pawn.rs
src/moves/bishop/: bishop_moves.rs
src/moves/move_helpers/: bishop_move_helpers.rs  diagonal_move_direction.rs  diagonal_moves.rs  helpers.rs  rook_move_helpers.rs
src/moves/pawn/: black_pawn.rs  white_pawn.rs
src/piece/: no_piece.rs  pawn.rs
