[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess" }
rand = "0.9.0-alpha.1"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
axum = { version = "0.7.3", features = ["ws"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.39.1"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
serde_repr = "0.1"
cargo-shuttle = "0.47.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
reqwest = "0.11.23"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "warn"
# restriction = "deny"
