[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess" }
rand = "0.9.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.7.9", features = ["ws"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.48.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
serde_repr = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
reqwest = "0.11.27"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "warn"
