[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../chess" }
rand = "0.9.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
futures = "0.3.31"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "warn"
