[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary


[dependencies]
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
serde_repr = "0.1"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "warn"
# restriction = "deny"
